Fixed text wrap

--- a/src/components/Map/Map.module.scss
+++ b/src/components/Map/Map.module.scss
@@ -30,7 +30,7 @@
   }
 
   p {
-    min-width: 330px;
+    white-space: nowrap;
     background-color: white;
     padding: 6px 6px 6px 15px;
     margin-left: -10px;
